[package]
name = "exercism-cli-enhancement"
authors = ["Benny Yen <benny123tw@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ece"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
